--- a/constants.gradle
+++ b/constants.gradle
@@ -19,7 +19,7 @@
  */
 
 project.ext {
-    gradleVersion = "3.1.2"
+    gradleVersion = "4.1.0-alpha08"
     buildTools = "27.0.3"
     supportLibraryVersion = "27.0.2"
     compileSdk = 27
